--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.18.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
