--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "madge": "^6.1.0",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
