--- a/website/package.json
+++ b/website/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "antd": "^5.11.4",
     "bootstrap": "^5.3.2",
+    "icons": "^1.0.0",
     "next": "13.5.6",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "sass": "^1.69.5"
   },
