--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "sass": "^1.69.5"
   },
