--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "antd": "^5.11.4",
     "bootstrap": "^5.3.2",
-    "next": "13.5.6",
+    "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.18.0",
