--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "antd": "^5.11.5",
     "icons": "^1.0.0",
     "next": "13.5.6",
